<resources>
    <string name="app_name">Memory Mirror</string>
    <string name="submit">add location button</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="add_image">ADD IMAGE</string>
    <string name="save_image">SAVE</string>
    <string name="selected_image">Selected Image</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="google_map_api_key">AIzaSyCZCNN3fZfcO344W3ct3JhzljMxk8tY_y4</string>
</resources>